# ferropass

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.rs  clipboard.rs  encryption.rs  main.rs  models.rs  password.rs
