[package]
name = "ferropass"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.1"
argon2 = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rpassword = "7.2.0"
crossterm = "0.25.0"
clipboard = "0.5.0"
base64 = "0.21.0"
rust-crypto = "0.2.36"
rand_core = "0.6.4"
